Refine some API and stuff